--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "peer": "^0.6.1",
     "peerjs": "^1.3.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "compression-webpack-plugin": "^7.1.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^5.11.0",
